<resources>
    <string name="app_name">速易呼</string>
    <string name="waiting">加载中...</string>
    <string name="load_more">加载更多...</string>
    <string name="exiting">退出中...</string>
    <string name="setting">设置中...</string>
    <string name="tips">提示</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="finish">完成</string>
    <string name="update">更新</string>
    <string name="check_update">检查更新</string>
    <string name="restart">重启</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="sure">确定</string>
    <string name="i_know">我知道了</string>
    <string name="product">型号</string>
    <string name="version">版本</string>
    <string name="edit_success">修改成功</string>
    <string name="edit_failed">修改失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failed">修改失败</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="bind_success">绑定成功</string>
    <string name="data_load_failed">数据加载失败</string>
    <string name="data_load_success">数据加载成功</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="send">发送</string>
    <string name="check_all">全选</string>
    <string name="deselect_all">全不选</string>
    <string name="dev_nick_limit">设备昵称不能有特殊字符</string>
    <string name="dev_username_empty">设备用户名不能为空</string>
    <string name="send_validate_code">获取验证码</string>
    <string name="edit_now">立即修改</string>
    <string name="not_open">此功能暂未开通</string>
    <string name="guid_title1">功能简化，便捷易用</string>
    <string name="guid_tip1">全新设计风格 上手容易</string>
    <string name="guid_title2">用户体验，快速流畅</string>
    <string name="guid_tip2">简单、方便、快捷的全面提升</string>
    <string name="guid_title3">保护隐私，更加安全</string>
    <string name="guid_tip3">设备账号一对一绑定</string>
    <string name="guid_title4">一键分享，家人同乐</string>
    <string name="guid_tip4">幸福时光一键操作就能轻松分享</string>
    <string name="start_now">立即体验</string>
    <string name="start_see">立即查看</string>
    <string name="login">登录</string>
    <string name="username_null">请输入手机号/邮箱</string>
    <string name="password_null">请输入密码</string>
    <string name="user_null">请输入用户名</string>
    <string name="login_password_error">密码不正确</string>
    <string name="login_loading">小维正在登录...</string>
    <string name="login_join_register">还没有帐号,快速</string>
    <string name="login_auth_error">用户名或密码错误</string>
    <string name="login_ad_text1">小维E家</string>
    <string name="login_ad_text2">从心出发</string>
    <string name="login_ad_text3">有一种体贴，叫关注</string>
    <string name="login_found_pwd">忘记密码?</string>
    <string name="register">注册</string>
    <string name="register_phone_mail_input">请输入手机号/邮箱</string>
    <string name="register_conflict">该手机号或邮箱地址已被注册</string>
    <string name="register_no_conflict">恭喜，该账号可注册</string>
    <string name="register_phone_input">请输入手机号</string>
    <string name="register_phone_input_error">请输入正确的手机号</string>
    <string name="has_account">已有云视通账号，点击登录</string>
    <string name="register_email_input_error">请输入正确的邮箱地址</string>
    <string name="register_code_input">请输入验证码</string>
    <string name="register_agreement_1">我阅读并同意</string>
    <string name="register_agreement_2">注册协议</string>
    <string name="register_password">请输入密码, 长度在6–20位字符之间</string>
    <string name="register_confirm">请输入确认密码</string>
    <string name="register_password_error">两次输入的密码不一致</string>
    <string name="register_password_too_short">密码长度在6–20位字符之间</string>
    <string name="register_code_send_success">验证码已经发送到您的手机/邮箱，请注意查收</string>
    <string name="register_success">注册成功</string>
    <string name="register_read_first">请先阅读注册协议</string>
    <string name="register_not_agree">请阅读并接受注册协议</string>
    <string name="register_got_code_first">请先获取验证码</string>
    <string name="register_agreement">用户注册协议</string>
    <string name="register_code_send_error">请确认手机/邮箱可以正常使用</string>
    <string name="findpass">找回密码</string>
    <string name="found_send_code2phone">验证码已经发送到您的手机，有效时间为30分钟</string>
    <string name="found_send_code_waiting">正在发送验证码，请稍等&#160;&#160;</string>
    <string name="found_send_code2mail">验证码已经发送到您的邮箱,有效时间为30分钟</string>
    <string name="found_send_code_error">发送超时</string>
    <string name="found_reset_pwd">密码重置</string>
    <string name="found_new_pwd">输入新设置的密码</string>
    <string name="found_confirm_pwd">再次输入新设置的密码</string>
    <string name="found_user_not_exist">账号不存在</string>
    <string name="found_user_empty">用户名不能为空</string>
    <string name="found_pwd_soon">立即找回</string>
    <string name="found_pwd_success">密码找回成功，请用新密码重新登录</string>
    <string name="logout">注销登录</string>
    <string name="account_error_tips">您已离线，请点击登录。</string>
    <string name="network_error_tips">网络连接不可用,是否进行设置?</string>
    <string name="network_error">网络连接不可用,是否进行设置?</string>
    <string name="pressback_exit">再按一次退出程序</string>
    <string name="left_myservice">我的服务</string>
    <string name="left_myalbum">我的相册</string>
    <string name="left_setting">设置中心</string>
    <string name="left_help">帮助</string>
    <string name="left_aboutus">关于</string>
    <string name="share_title">邀请家人一起观看</string>
    <string name="myshared_users">我邀请的家人</string>
    <string name="use_qr_share">用二维码邀请家人</string>
    <string name="share_username">请输入分享用户</string>
    <string name="share_username_empty">用户名不能为空</string>
    <string name="share_add_user">添加其他用户</string>
    <string name="share_success">分享成功</string>
    <string name="share_error">分享失败</string>
    <string name="share_limit">分享设备已经到上限,不能继续添加</string>
    <string name="share_list_error">获取分享列表失败</string>
    <string name="share_return">以后再试</string>
    <string name="share_try_again">再试一次</string>
    <string name="delete_share_success">已删除%1$s对设备%2$s的分享</string>
    <string name="delete_share_error">取消分享失败</string>
    <string name="delete_share_msg">您确定要取消%1$s对用户%2$s的分享?</string>
    <string name="share_limit_positive">查看分享列表</string>
    <string name="share_limit_negative">返回</string>
    <string name="share_dev_description"></string>
    <string name="shared_usercount">已成功邀请？位家人</string>
    <string name="share_by_qr">使用二维码邀请家人</string>
    <string name="share_by_qr_description">请让您的家人打开小维E家，扫描下面的邀请码，就可以与您一起观看家里的摄像机了</string>
    <string name="share_device_qr">我的邀请码</string>
    <string name="not_share_device">取消分享</string>
    <string name="no_share_user_device">您还没有分享过您的设备</string>
    <string name="get_share_qr_error">获取邀请码失败</string>
    <string name="scan_share_device_qr">将扫描框对准家人摄像机的邀请码，开始扫描</string>
    <string name="share_device_qr_invalid">邀请码失效了？点击重新生成</string>
    <string name="mydev_add_success">添加设备成功</string>
    <string name="mydev_add_error">添加设备失败</string>
    <string name="mydev_list_error">设备列表获取失败</string>
    <string name="mydev_delete_error">删除设备失败</string>
    <string name="mydev_on_delete">正在删除设备</string>
    <string name="mydev_cancel_share_error">删除设备失败</string>
    <string name="store">商城</string>
    <string name="community">社区</string>
    <string name="square">广场</string>
    <string name="mydev_modify_title">修改设备</string>
    <string name="mydev_modify_success">设备修改成功</string>
    <string name="mydev_modify_error">修改设备失败</string>
    <string name="mydev_permission_deny">对不起，您没有设备操作的权限</string>
    <string name="mydev_receive_share_msg">您收到了一个设备分享消息！</string>
    <string name="mydev_receive_cancel_share_msg">设备的主人取消了对您的分享！</string>
    <string name="mydev_delete_msg">您确定要删除设备：%1$s？</string>
    <string name="mydev_delete_title">删除设备</string>
    <string name="mydev_shared_tag">分享给我的设备</string>
    <string name="mydev_online">设备在线</string>
    <string name="mydev_offline">设备离线</string>
    <string name="add_new_dev">添加一个新设备</string>
    <string name="add_dev">请选择任一添加方式</string>
    <string name="add_dev_wifi">声波配置添加</string>
    <string name="not_support_5G">摄像机暂不支持连接5G Wi-Fi</string>
    <string name="add_dev_wifi_description">未连网设备</string>
    <string name="add_dev_net_qr">扫描设备上的二维码</string>
    <string name="add_dev_other_qr">扫描家人邀请码</string>
    <string name="add_dev_net">云视通号添加</string>
    <string name="add_dev_net_description">已连网设备</string>
    <string name="add_dev_net_confirm">添加设备</string>
    <string name="add_other_dev">连接家人摄像机</string>
    <string name="add_other_dev_description">二维码扫描添加家人摄像机</string>
    <string name="next_tip">下一步</string>
    <string name="wave_config_first_title">请用顶针轻插设备的RESET孔，直到听到提示音</string>
    <string name="wave_config_first_highlight">“RESET”</string>
    <string name="wave_config_hint_SSID">TP_LINK_222</string>
    <string name="wave_config_third_title">点击发送声波按钮让摄像机连接无线网络</string>
    <string name="wave_config_start_text">点击发送声波</string>
    <string name="wave_send_btn_text">点击\n发送声波</string>
    <string name="add_dev_username">输入设备用户名</string>
    <string name="add_dev_password">输入设备密码</string>
    <string name="yst_id">输入设备云视通号</string>
    <string name="nickname">昵称(选填)</string>
    <string name="dev_online">已上线成功，无论距离多远，爱就在身边！</string>
    <string name="adddevice_conflict">该设备已被绑定，您无需再次绑定</string>
    <string name="add_dev_qr_error">二维码信息有误,无法添加设备</string>
    <string name="add_dev_yst_id_error">云视通号有误</string>
    <string name="add_dev_yst_id_empty">云视通号不能为空</string>
    <string name="add_dev_search">正在搜索设备</string>
    <string name="add_dev_search_highlight">正在连接摄像机，</string>
    <string name="add_dev_search_success_title">摄像机连接成功</string>
    <string name="add_dev_search_msg">在结果中，点击一个设备绑定</string>
    <string name="add_dev_search_error_title">可能是给摄像机配置的WiFi密码错误,导致摄像机配置失败，请重新输入WiFi密码再试一次</string>
    <string name="add_dev_search_again">再试一次</string>
    <string name="add_dev_search_give_up">取消</string>
    <string name="add_dev_first_step">第一步 准备摄像机</string>
    <string name="add_dev_has_heard_sound">已经听到提示音</string>
    <string name="add_dev_second_step">第二步 连接无线网</string>
    <string name="add_dev_third_step">第三步 发送声波</string>
    <string name="add_dev_fourth_step">第四步 配置无线</string>
    <string name="add_dev_connect_wifi">连接Wifi</string>
    <string name="add_dev_sending">正在发送声波...</string>
    <string name="add_dev_send_finished">声波发送完毕，等待摄像机发出\n收到网络配置提示</string>
    <string name="add_dev_send_failed">如果没有听到提示，请再次发送声波</string>
    <string name="add_dev_send_received">收到网络配置</string>
    <string name="not_supportx86">暂不支持x86架构的设备</string>
    <string name="scan_camera_error_title">开启相机失败</string>
    <string name="scan_camera_error1">正在拍照，请在关闭相机后重试</string>
    <string name="scan_camera_error2">相机已被其他应用占用，请在关闭占用相机的应用后重试</string>
    <string name="scan_camera_error3">无法获取相机权限，请在手机【设置】中打开小维E家的相机权限</string>
    <string name="scan_camera_error_msg">可能有以下原因和解决方法</string>
    <string name="scan_camera_error_btn">取消</string>
    <string name="scan_camera_add_manual">手动添加</string>
    <string name="scan_result_title">扫描结果</string>
    <string name="scan_result_warning">不是小维E家的设备</string>
    <string name="scan_result_http">网址：</string>
    <string name="scan_result_positive_btn">继续扫描</string>
    <string name="scan_result_positive_btn2">浏览器打开</string>
    <string name="closed">已断开</string>
    <string name="connectting">视频连接中...</string>
    <string name="buffering1">视频缓冲中</string>
    <string name="buffering2">视频缓冲中...</string>
    <string name="connectfailed">视频连接失败</string>
    <string name="connfailed_auth">用户名或密码错误</string>
    <string name="connfailed_auth_cat">发现猫眼设备新版本，请在设备端升级新版本之后再连接。</string>
    <string name="device_user_format_error">用户名格式不正确，用户名只能由1–16位的英文、数字及-_+().组成.</string>
    <string name="device_pass_format_error">密码格式不正确，密码只能由0–12位的英文、数字及-_+().组成.</string>
    <string name="device_nickname_format_error">昵称应由0–20个字母、数字、汉字及特殊字符-_+().组成</string>
    <string name="connfailed_channel_notopen">该通道不存在或未开放</string>
</resources>