<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_tab_background"
    android:fadingEdge="none"
    android:scrollbars="none"
    tools:ignore="UnusedAttribute,ContentDescription" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="100dp" >

        <TextView
            style="@style/text_large_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/main_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/format_item_height" >

            <EditText
                android:id="@+id/username_edittext"
                style="@style/edit_default_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/format_item_height"
                android:hint="@string/register_phone_mail_input"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:textCursorDrawable="@drawable/bg_cursor_default"
                android:textSize="@dimen/text_min_size" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#80ffffff" />

            <ImageButton
                android:id="@+id/login_spinner_btn"
                android:layout_width="@dimen/format_item_height"
                android:layout_height="@dimen/format_item_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="24dp"
                android:background="@android:color/transparent"
                android:src="@drawable/cloud_downed" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/format_item_height" >

            <EditText
                android:id="@+id/password_edittext"
                style="@style/edit_default_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:textCursorDrawable="@drawable/bg_cursor_default"
                android:textSize="@dimen/text_min_size" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#80ffffff" />

            <TextView
                android:id="@+id/findpass_textview"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/format_item_height"
                android:layout_alignParentRight="true"
                android:layout_marginRight="24dp"
                android:gravity="center_vertical"
                android:text="@string/login_found_pwd"
                android:textColor="@color/text_color_gray68"
                android:textSize="@dimen/text_min_size" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/btn_default_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/format_item_height"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="@dimen/layout_large_margin"
            android:text="@string/login" />

        <LinearLayout
            android:id="@+id/register_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/layout_mid_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_join_register"
                android:textColor="@color/text_color_gray84"
                android:textSize="@dimen/text_min_size" />

            <TextView
                android:id="@+id/register_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/text_color_gray68"
                android:textSize="@dimen/text_min_size" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>