<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_mid_margin"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/divider_horizontal" />

        <EditText
            android:id="@+id/register_username_text"
            style="@style/edit_default_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edit_height"
            android:drawableRight="@drawable/icon_edit_right_arrow"
            android:editable="false"
            android:paddingLeft="13dp" />

        <EditText
            android:id="@+id/register_password_edittext"
            style="@style/edit_default_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edit_height"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="13dp" />

        <EditText
            android:id="@+id/register_confirm_edittext"
            style="@style/edit_default_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edit_height"
            android:hint="@string/register_confirm"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="13dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edit_height"
            android:layout_marginLeft="13dp">

            <EditText
                android:id="@+id/register_code_edittext"
                style="@style/edit_default_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/register_code_input"
                android:paddingLeft="0dp" />

            <Button
                android:id="@+id/register_code_button"
                style="@style/btn_default_style"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/format_item_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_min_margin"
                android:background="@drawable/btn_red_bg_selector"
                android:text="@string/send_validate_code" />
        </RelativeLayout>

        <include layout="@layout/divider_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/format_item_height"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="@dimen/layout_min_margin"
        android:orientation="horizontal">


    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        style="@style/btn_default_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/format_item_height"
        android:layout_marginLeft="@dimen/layout_max_margin"
        android:layout_marginRight="@dimen/layout_max_margin"
        android:layout_marginTop="@dimen/layout_min_margin"
        android:text="@string/register" />

</LinearLayout>