<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_edit_height"
        android:layout_marginTop="@dimen/layout_mid_margin">

        <EditText
            android:id="@+id/register_username_edittext"
            style="@style/edit_default_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edit_height"
            android:background="@drawable/bg_with_segment"
            android:hint="@string/register_phone_mail_input"
            android:paddingLeft="13dp" />

        <ProgressBar
            android:id="@+id/register_check_progressbar"
            android:layout_width="@dimen/format_item_height"
            android:layout_height="@dimen/format_item_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/register_warn_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/icon_warn"
        android:gravity="center_vertical|left"
        android:text="@string/register_phone_input_error"
        android:textColor="@color/text_hint_color"
        android:visibility="gone" />

    <Button
        android:id="@+id/register_next_tip_button"
        style="@style/btn_default_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/format_item_height"
        android:layout_marginLeft="@dimen/layout_max_margin"
        android:layout_marginRight="@dimen/layout_max_margin"
        android:layout_marginTop="@dimen/layout_max_margin"
        android:text="@string/next_tip" />


</LinearLayout>